# dashboard_load_profile

./: package-lock.json  package.json
api/: Cargo.toml
api/src/: main.rs
src/: 2  App.css  App.jsx  index.css
src/components/: areachart.jsx  barchart.jsx  lineplot.jsx  piechart.jsx  sidebar.css  sidebar.jsx
src/components/KPI/: cards.jsx  kpi.css  kpi.jsx
src/components/dataset/: dataset.jsx
src/components/navbar-component/: navbar.css  navbar.jsx
src/components/plots-component/: HorizontalBarChart.jsx  PerformanceComparison.jsx  areachart.jsx  barchart.jsx  doughnut.jsx  lineplot.jsx  multitypeChart.jsx  pieChart.jsx  piechart.jsx  summaryPlot.jsx
src/components/sidebar-component/: sidebar.css  sidebar.jsx
src/pages/Home/: home.jsx
src/pages/dashboard/: dashboard.jsx
src/pages/utility/: utility.css  utility.jsx
src/services/: getBuilding.jsx  getPredictions.jsx
src/utils/: pdfexport.js
