[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version= "0.8.8", features = ["json", "form"]}
reqwest = { version= "0.13.2", features =["json", "form"]}
serde = { version="1.0.228", features=["derive"]}
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version="0.6.8", features=["cors"]}
